--- a/css/style.css
+++ b/css/style.css
@@ -47,7 +47,7 @@
 
 		a:hover {
 			border-bottom-color: transparent;
-			color: #49bf9d !important;
+			color: orange !important;
 			text-decoration: none;
 		}
 
@@ -544,6 +544,20 @@
 				width: 100%;
 			}
 
+		.image.logo {
+			border-radius: 100%;
+		}
+
+			.image.logo:before {
+				display: none;
+			}
+
+			.image.logo img {
+				border-radius: 100%;
+				width: 100%;
+			}
+
+
 		.image.avatar {
 			border-radius: 100%;
 		}
@@ -931,12 +945,13 @@
 /* Header */
 
 	#header {
-		background-color: #1f1815;
-		background-attachment: scroll,								fixed;
+		/* background-color: #1f1815; */
+		background-color: #FFF;
+		background-attachment: scroll,								scroll;
 		background-image: url("images/overlay.png"), url("../images/bg.jpg");
 		background-position: top left,							top left;
-		background-repeat: repeat,								no-repeat;
-		background-size: auto,								auto 100%;
+		background-repeat: repeat,								repeat;
+		background-size: auto,								100%;
 		color: rgba(255, 255, 255, 0.5);
 		height: 100%;
 		left: 0;
@@ -965,6 +980,10 @@
 		#header .image.avatar {
 			margin: 0 0 1em 0;
 			width: 6.25em;
+		}
+		#header .image.logo {
+			margin: 0 0 1em 0;
+			width: 16em;
 		}
 
 /* Footer */
@@ -1017,7 +1036,7 @@
 	#main {
 		margin-left: 35%;
 		max-width: 54em;
-		padding: 8em 4em 4em 4em;
+		padding: 4em 4em 4em 4em;
 		width: calc(100% - 35%);
 	}
 
@@ -1244,3 +1263,10 @@
 	body.is-touch .poptrox-popup .closer {
 		opacity: 1.0 !important;
 	}
+
+
+#language{
+right:15px;
+top:5px;
+position:absolute;
+}
