--- a/css/style.css
+++ b/css/style.css
@@ -973,7 +973,7 @@
 		#header h1 {
 			color: rgba(255, 255, 255, 0.5);
 			font-size: 1.35em;
-			line-height: 1.75em;
+			/* line-height: 1.75em; */
 			margin: 0;
 		}
 
@@ -991,7 +991,7 @@
 	#footer {
 		bottom: 0;
 		left: 0;
-		padding: 0 4em 6em 0;
+		padding: 0 4em 4em 0;
 		position: fixed;
 		text-align: right;
 		width: 35%;
