--- a/layouts/home.html
+++ b/layouts/home.html
@@ -37,7 +37,7 @@
 		<!-- Main -->
 
 <span id="language">
-	<a href="#" >English</a> | <a href="#" >Malayalam</a>
+	<?php // generate_language_links() ?>
 </span>
 			<div id="main">
 
@@ -45,13 +45,13 @@
 					<section id="one">
 						<header class="major">
 							<h2>Kolapilly Ayurveda Multispeciality Clinic<br />
-							specialisation  in Kayakalpa Chikilsa and paediatry .</h2>
+							specialisation  in Kaya Chikilsa and paediatry .</h2>
 						</header>
-						<p>The Kolapilly family, at Vennala in Ernakulam Dist. has a tradition of centuries in Ayurvedic treament as well as production of ayurvedic medicines. The renowned physician Govindan Vaidyar, practitioner in Ayurvedic treatment, especially in paediatry and psychiatry, is the pioneer in this tradition.
+						<p>The Kolapilly family, at Vennala in Ernakulam Dist. has a tradition of centuries in Ayurvedic treatment as well as production of ayurvedic medicines. The renowned physician Govindan Vaidyar, practitioner in Ayurvedic treatment, especially in paediatrics and psychiatry, is the pioneer in this tradition.
 <br /><br />
- During 1950s, under the intiative of  Sri. Govindan Vaidyar, a centre was established at Thammanam, in the old Travancore-Kochi border, with the purpose of conducting trade and for storage of  Ayurvedic medicines. By 1954, this centre was developed into “Sreekrishna Vilasam Ayurveda Bala Vaidya Sala”, a centre through which his expertise and experience in ayurvedic practice became beneficial to the local people. 
+ During 1950s, under the initiative of  Sri. Govindan Vaidyar, a center was established at Thammanam, in the old Travancore-Kochi border, with the purpose of conducting trade and for storage of  Ayurvedic medicines. By 1954, this centre was developed into “Sreekrishna Vilasam Ayurveda Bala Vaidya Sala”, a center through which his expertise and experience in ayurvedic practice became beneficial to the local people. 
 <br /><br />
-Succeeding Sri. Govindan Vaidyar, from 1975 onwards, his son Sri. Madhavan Vaidyan, a leading figure in paediatrics in ayurveda of that time, was running the clinic. After his demise, his son Dr. Mahesh Kolapilly B.A.M.S took this position. From the year 2001 onwards Dr. Mahesh has been practising at “Sreekrishna Vilasam Ayurveda Bala Vaidya sala”, a centre through which the great traditional  knowledge of ayurvedic medication comes to the benefit of common man. Dr. Mahesh started “Kolapilly Ayurvedic Multispeciality Clinic” at Thammanam, where his skill and specialisation  in “Kayakalpa Chikilsa” and paediatry can be applied with the help of the tremendous potentials of “Panchakarma Chikilsa”</p>
+Succeeding Sri. Govindan Vaidyar, from 1975 onwards, his son Sri. Madhavan Vaidyan, a leading figure in paediatrics in ayurveda of that time, was running the clinic. After his demise, his son Dr. Mahesh Kolapilly B.A.M.S took this position. From the year 2001 onwards Dr. Mahesh has been practicing at “Sreekrishna Vilasam Ayurveda Bala Vaidya sala”, a center through which the great traditional  knowledge of ayurvedic medication comes to the benefit of common man. Dr. Mahesh started “Kolapilly Ayurvedic Multispeciality Clinic” at Thammanam, where his skill and specialization  in “Kaya Chikilsa” and paediatrics can be applied with the help of the tremendous potentials of “Panchakarma Chikilsa”</p>
 
 					</section>
 
@@ -65,8 +65,13 @@ Succeeding Sri. Govindan Vaidyar, from 1975 onwards, his son Sri. Madhavan Vaidy
 								<p>A young Ayurvedic graduate with an established out patient clinician, hailing from a family of traditional vaidyas and a specialist in the field of pediatric and skin diseases.</p>
 <h3>Consultation Time : <strong>10.00 AM - 1.00 PM</strong></h3>
 								<ul class="actions">
+									<li><a href="tel:04842333057" class="button">CALL 0484 233 30 57</a></li>
+								</ul> 
+								<ul class="actions">
 									<li><a href="tel:+919847258057" class="button">CALL +91 9847 25 8057</a></li>
 								</ul> 
+
+
 							</article>
 							<article class="6u$ 12u$(xsmall) ">
 								<a href="dr.saritha.mahesh.php" class="image fit thumb"><img src="images/profile/dr.saritha_mahesh.jpg" alt="" /></a>
@@ -74,6 +79,9 @@ Succeeding Sri. Govindan Vaidyar, from 1975 onwards, his son Sri. Madhavan Vaidy
 								<p>A graduate, researching women's health care and beauty enhancing therapies for the last one decade.
 <br/><br/><br/></p>
 <h3>Consultation Time : <strong>2.30 PM - 5.30 PM</strong></h3>
+								<ul class="actions">
+									<li><a href="tel:04842333057" class="button">CALL 0484 233 30 57</a></li>
+								</ul> 
 								<ul class="actions">
 									<li><a href="tel:+919446536538" class="button">CALL +91 944 653 6538</a></li>
 								</ul>
@@ -164,6 +172,15 @@ Succeeding Sri. Govindan Vaidyar, from 1975 onwards, his son Sri. Madhavan Vaidy
 								</ul>
 							</div>
 						</div>
+					</section>
+
+					<section id="six">
+						<h2>MAP</h2>
+
+<article class="6u$ 12u$(xsmall) work-item">
+								<a href="images/map.jpg" class="image fit thumb"><img src="images/map.jpg" alt="" /></a>
+
+							</article>
 					</section>
 
 
