--- a/layouts/pharmacy.html
+++ b/layouts/pharmacy.html
@@ -37,7 +37,7 @@
 		<!-- Main -->
 
 <span id="language">
-	<a href="#" >English</a> | <a href="#" >Malayalam</a>
+	<?php // generate_language_links() ?>
 </span>
 			<div id="main">
 
@@ -49,11 +49,11 @@
 						<p>Kolapilly with a tradition of centuries to their credit, has a pharmacy established at vennala, where traditional herbal medicines and special medicines for individual treatment are prepared under the supervision of the physician. The medicines are prepared in this pharmacy with the sole purpose of treating our patients and not for sale.
 <br /><br />
 
-The Kolapilly family, at Vennala in Ernakulam Dist. has a tradition of centuries in Ayurvedic treament as well as production of ayurvedic medicines. The renowned physician Govindan Vaidyar, practitioner in Ayurvedic treatment, especially in paediatry and psychiatry, is the pioneer in this tradition.
+The Kolapilly family, at Vennala in Ernakulam Dist. has a tradition of centuries in Ayurvedic treatment as well as production of ayurvedic medicines. The renowned physician Govindan Vaidyar, practitioner in Ayurvedic treatment, especially in paediatrics and psychiatry, is the pioneer in this tradition.
 <br /><br />
- During 1950s, under the intiative of  Sri. Govindan Vaidyar, a centre was established at Thammanam, in the old Travancore-Kochi border, with the purpose of conducting trade and for storage of  Ayurvedic medicines. By 1954, this centre was developed into “Sreekrishna Vilasam Ayurveda Bala Vaidya Sala”, a centre through which his expertise and experience in ayurvedic practice became beneficial to the local people. 
+ During 1950s, under the initiative of  Sri. Govindan Vaidyar, a center was established at Thammanam, in the old Travancore-Kochi border, with the purpose of conducting trade and for storage of  Ayurvedic medicines. By 1954, this center was developed into “Sreekrishna Vilasam Ayurveda Bala Vaidya Sala”, a centre through which his expertise and experience in ayurvedic practice became beneficial to the local people. 
 <br /><br />
-“Sreekrishna Vilasam Ayurveda Bala Vaidya sala”, a centre through which the great traditional  knowledge of ayurvedic medication comes to the benefit of common man. Dr. Mahesh started “Kolapilly Ayurvedic Multispeciality Clinic” at Thammanam, where his skill and specialisation  in “Kayakalpa Chikilsa” and paediatry can be applied with the help of the tremendous potentials of “Panchakarma Chikilsa”</p>
+“Sreekrishna Vilasam Ayurveda Bala Vaidya sala”, a center through which the great traditional  knowledge of ayurvedic medication comes to the benefit of common man. Dr. Mahesh started “Kolapilly Ayurvedic Multispeciality Clinic” at Thammanam, where his skill and specialization  in “Kaya Chikilsa” and paediatrics can be applied with the help of the tremendous potentials of “Panchakarma Chikilsa”</p>
 
 					</section>
 
