--- a/layouts/saritha.html
+++ b/layouts/saritha.html
@@ -38,7 +38,7 @@
 		<!-- Main -->
 
 <span id="language">
-	<a href="#" >English</a> | <a href="#" >Malayalam</a>
+	<?php // generate_language_links() ?>
 </span>
 			<div id="main">
 
@@ -47,16 +47,19 @@
 						<header class="major">
 							<h2>Dr. SARITHA MAHESH B.A.M.S</h2>
 						</header>
-						<p>A graduate, researching women's health care and beauty enhancing therapies for the last one decade.
+						<p>A young B.A.M.S graduate from "SDM College of ayurveda" Udupi, hailing from family of traditional vaidyas. She is grand daughter of ANKAN VAIDYAN, who is specialized in "Vata Rogas" (Rheumatic diseases).She is working in "Wellness Solutions", Kundannur. 
 <br /><br />
-The Kolapilly family, at Vennala in Ernakulam Dist. has a tradition of centuries in Ayurvedic treament as well as production of ayurvedic medicines. The renowned physician Govindan Vaidyar, practitioner in Ayurvedic treatment, especially in paediatry and psychiatry, is the pioneer in this tradition.
+ Dr. Saritha Mahesh has been practicing at “Sreekrishna Vilasam Ayurveda Bala Vaidya sala”, a center through which the great traditional  knowledge of ayurvedic medication comes to the benefit of common man. 
+Specialized  in Ayurved Medicines and Gynecological diseases. 
 <br /><br />
- During 1950s, under the intiative of  Sri. Govindan Vaidyar, a centre was established at Thammanam, in the old Travancore-Kochi border, with the purpose of conducting trade and for storage of  Ayurvedic medicines. By 1954, this centre was developed into “Sreekrishna Vilasam Ayurveda Bala Vaidya Sala”, a centre through which his expertise and experience in ayurvedic practice became beneficial to the local people. 
+ During 1950s, under the initiative of  Sri. Govindan Vaidyar, a centre was established at Thammanam, in the old Travancore-Kochi border, with the purpose of conducting trade and for storage of  Ayurvedic medicines. By 1954, this center was developed into “Sreekrishna Vilasam Ayurveda Bala Vaidya Sala”, a centre through which his expertise and experience in ayurvedic practice became beneficial to the local people. 
 <br /><br />
-Succeeding Sri. Govindan Vaidyar, from 1975 onwards, his son Sri. Madhavan Vaidyan, a leading figure in paediatrics in ayurveda of that time, was running the clinic. After his demise, his son Dr. Mahesh Kolapilly B.A.M.S took this position. From the year 2001 onwards Dr. Mahesh has been practising at “Sreekrishna Vilasam Ayurveda Bala Vaidya sala”, a centre through which the great traditional  knowledge of ayurvedic medication comes to the benefit of common man. Dr. Mahesh started “Kolapilly Ayurvedic Multispeciality Clinic” at Thammanam, where his skill and specialisation  in “Kayakalpa Chikilsa” and paediatry can be applied with the help of the tremendous potentials of “Panchakarma Chikilsa”</p>
-</p>
+From 1975 onwards, Sri. Govindan Vaidyar son Sri. Madhavan Vaidyan, a leading figure in paediatrics in ayurveda of that time, was running the clinic. After his demise, his son Dr. Mahesh Kolapilly B.A.M.S took this position. From the year 2001 onwards Dr. Mahesh has been practicing at “Sreekrishna Vilasam Ayurveda Bala Vaidya sala”, a center through which the great traditional  knowledge of ayurvedic medication comes to the benefit of common man.
 
+</p>
+</p>
 								<ul class="actions">
+									<li><a href="tel:04842333057" class="button">CALL 0484 233 30 57</a></li>
 									<li><a href="tel:+919446536538" class="button">CALL +91 944 653 6538</a></li>
 									<li><a href="index.php" class="button">BACK TO HOME</a></li>
 								</ul>
@@ -71,9 +74,9 @@ Succeeding Sri. Govindan Vaidyar, from 1975 onwards, his son Sri. Madhavan Vaidy
 			<footer id="footer">
 				<ul class="icons">
 					<li><a  href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-					<li><a target="_blank" href="http://www.facebook.com/kolapilly.ayurveda" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+					<li><a target="_blank" href="https://www.facebook.com/drsaritha.das" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 					<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-					<li><a href="mailto:kolapillyayurveda@gmail.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+					<li><a href="mailto:drsarithadas@gmail.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 				</ul>
 				<ul class="copyright">
 					<li>Copyright  &copy; 2014-2016 kolapillyayurveda.com. All rights reserved.</li>
