--- a/layouts/thankyou.html
+++ b/layouts/thankyou.html
@@ -37,7 +37,7 @@
 		<!-- Main -->
 
 <span id="language">
-	<a href="#" >English</a> | <a href="#" >Malayalam</a>
+	<?php // generate_language_links() ?>
 </span>
 			<div id="main">
 
