--- a/layouts/gallery.html
+++ b/layouts/gallery.html
@@ -37,7 +37,7 @@
 		<!-- Main -->
 
 <span id="language">
-	<a href="#" >English</a> | <a href="#" >Malayalam</a>
+	<?php // generate_language_links() ?>
 </span>
 			<div id="main">
 
@@ -63,6 +63,16 @@
 								<a href="images/gallery/kolapillyayurveda.2.jpg" class="image fit thumb"><img src="images/gallery/kolapillyayurveda.2.jpg" alt="" /></a>
 
 							</article>
+							<article class="6u 12u$(xsmall) work-item">
+								<a href="images/gallery/kolapillyayurveda.3.jpg" class="image fit thumb"><img src="images/gallery/kolapillyayurveda.3.jpg" alt="" /></a>
+							</article>
+							<article class="6u$ 12u$(xsmall) work-item">
+								<a href="images/gallery/kolapillyayurveda.4.jpg" class="image fit thumb"><img src="images/gallery/kolapillyayurveda.4.jpg" alt="" /></a>
+							</article>
+
+
+
+
 							<article class="6u 12u$(xsmall) work-item">
 								<a href="images/pharmacy/1.jpg" class="image fit thumb"><img src="images/pharmacy/1.jpg" alt="" /></a>
 							</article>
