thank you modified

--- a/layouts/home.html
+++ b/layouts/home.html
@@ -149,7 +149,7 @@ Succeeding Sri. Govindan Vaidyar, from 1975 onwards, his son Sri. Madhavan Vaidy
 									</div>
 <br/>
 								<ul class="actions">
-									<li><input type="submit" value="Send Message" /></li>
+									<li><input name="submit"  type="submit" value="Send Message" /></li>
 								</ul>
 								</form>
 							</div>
