--- a/layouts/thankyou.html
+++ b/layouts/thankyou.html
@@ -46,7 +46,7 @@
 						<header class="major">
 							<h2>THANK YOU</h2>
 						</header>
-						<p>Thank you for contacting us. </p>
+						<p> <?php echo $contactus_message; ?> </p>
 
 					</section>
 
