--- a/layouts/home.html
+++ b/layouts/home.html
@@ -62,13 +62,13 @@ Succeeding Sri. Govindan Vaidyar, from 1975 onwards, his son Sri. Madhavan Vaidy
 							<article class="6u 12u$(xsmall) ">
 								<a href="dr.mahesh.kolapilly.php" class="image fit thumb"><img src="images/profile/dr.mahesh.k.m.jpg" alt="" /></a>
 								<h3>Dr. MAHESH KOLAPILLY B.A.M.S</h3>
-								<p>A young Ayurvedic graduate with an established out patient clinician, hailing from a family of traditional vaidyas and a specialist in the field of pediatric and skin diseases.</p>
+								<p>A young Ayurvedic graduate with an established out patient clinician, hailing from a family of traditional vaidyas and a specialist in the field of paediatrics and skin diseases.</p>
 <h3>Consultation Time : <strong>10.00 AM - 1.00 PM</strong></h3>
 								<ul class="actions">
-									<li><a href="tel:04842333057" class="button">CALL 0484 233 30 57</a></li>
+									<li><a href="<?php if(is_mobile()){ echo'tel:04842333057';}else{ echo'#';} ?>" class="button">CALL 0484 233 30 57</a></li>
 								</ul> 
 								<ul class="actions">
-									<li><a href="tel:+919847258057" class="button">CALL +91 9847 25 8057</a></li>
+									<li><a href="<?php if(is_mobile()){ echo'tel:+919847258057';}else{ echo'#';} ?>" class="button">CALL +91 9847 25 8057</a></li>
 								</ul> 
 
 
@@ -80,10 +80,10 @@ Succeeding Sri. Govindan Vaidyar, from 1975 onwards, his son Sri. Madhavan Vaidy
 <br/><br/><br/></p>
 <h3>Consultation Time : <strong>2.30 PM - 5.30 PM</strong></h3>
 								<ul class="actions">
-									<li><a href="tel:04842333057" class="button">CALL 0484 233 30 57</a></li>
+									<li><a href="<?php if(is_mobile()){ echo'tel:04842333057';}else{ echo'#';} ?>" class="button">CALL 0484 233 30 57</a></li>
 								</ul> 
 								<ul class="actions">
-									<li><a href="tel:+919446536538" class="button">CALL +91 944 653 6538</a></li>
+									<li><a href="<?php if(is_mobile()){ echo'tel:+919446536538';}else{ echo'#';} ?>" class="button">CALL +91 944 653 6538</a></li>
 								</ul>
 							</article>
 
