--- a/layouts/saritha.html
+++ b/layouts/saritha.html
@@ -47,10 +47,10 @@
 						<header class="major">
 							<h2>Dr. SARITHA MAHESH B.A.M.S</h2>
 						</header>
-						<p>A young B.A.M.S graduate from "SDM College of ayurveda" Udupi, hailing from family of traditional vaidyas. She is grand daughter of ANKAN VAIDYAN, who is specialized in "Vata Rogas" (Rheumatic diseases).She is working in "Wellness Solutions", Kundannur. 
+						<p>A young B.A.M.S graduate from "SDM College of ayurveda" Udupi, hailing from family of traditional vaidyas. She is the grand daughter of ANKAN VAIDYAN, who is specialized in "Vata Rogas" (Rheumatic diseases). She is working in "Wellness Solutions", Kundannur. 
 <br /><br />
- Dr. Saritha Mahesh has been practicing at “Sreekrishna Vilasam Ayurveda Bala Vaidya sala”, a center through which the great traditional  knowledge of ayurvedic medication comes to the benefit of common man. 
-Specialized  in Ayurved Medicines and Gynecological diseases. 
+ Dr. Saritha Mahesh is also practicing at “Sreekrishna Vilasam Ayurveda Bala Vaidya sala”, a center through which the great traditional  knowledge of ayurvedic medication comes to the benefit of common man. 
+Specialized  in Ayurvedic Nutritional Medicines and Gynecological diseases. 
 <br /><br />
  During 1950s, under the initiative of  Sri. Govindan Vaidyar, a centre was established at Thammanam, in the old Travancore-Kochi border, with the purpose of conducting trade and for storage of  Ayurvedic medicines. By 1954, this center was developed into “Sreekrishna Vilasam Ayurveda Bala Vaidya Sala”, a centre through which his expertise and experience in ayurvedic practice became beneficial to the local people. 
 <br /><br />
@@ -59,8 +59,12 @@ From 1975 onwards, Sri. Govindan Vaidyar son Sri. Madhavan Vaidyan, a leading fi
 </p>
 </p>
 								<ul class="actions">
-									<li><a href="tel:04842333057" class="button">CALL 0484 233 30 57</a></li>
-									<li><a href="tel:+919446536538" class="button">CALL +91 944 653 6538</a></li>
+									<li><a href="<?php if(is_mobile()){ echo'tel:04842333057';}else{ echo'#';} ?>" class="button">CALL 0484 233 30 57</a></li>
+								</ul> 
+								<ul class="actions">
+									<li><a href="<?php if(is_mobile()){ echo'tel:+919446536538';}else{ echo'#';} ?>" class="button">CALL +91 944 653 6538</a></li>
+								</ul> 
+								<ul class="actions">
 									<li><a href="index.php" class="button">BACK TO HOME</a></li>
 								</ul>
 
