--- a/layouts/mahesh.html
+++ b/layouts/mahesh.html
@@ -47,17 +47,20 @@ Consultation Time : <strong>10.00 AM - 1.00 PM</strong>
 						<header class="major">
 							<h2>Dr. MAHESH KOLAPILLY B.A.M.S</h2>
 						</header>
-						<p>A young Ayurvedic graduate with an established out patient clinician, hailing from a family of traditional vaidyas and a specialist in the field of pediatric and skin diseases.
+						<p>A young Ayurvedic graduate with an established out patient clinician, hailing from a family of traditional vaidyas and a specialist in the field of paediatrics and skin diseases.
 <br /><br />
 The Kolapilly family, at Vennala in Ernakulam Dist. has a tradition of centuries in Ayurvedic treament as well as production of ayurvedic medicines. The renowned physician Govindan Vaidyar, practitioner in Ayurvedic treatment, especially in paediatrics and psychiatry, is the pioneer in this tradition.
 <br /><br />
  During 1950s, under the initiative of  Sri. Govindan Vaidyar, a center was established at Thammanam, in the old Travancore-Kochi border, with the purpose of conducting trade and for storage of  Ayurvedic medicines. By 1954, this centre was developed into “Sreekrishna Vilasam Ayurveda Bala Vaidya Sala”, a center through which his expertise and experience in ayurvedic practice became beneficial to the local people. 
 <br /><br />
-Succeeding Sri. Govindan Vaidyar, from 1975 onwards, his son Sri. Madhavan Vaidyan, a leading figure in paediatrics in ayurveda of that time, was running the clinic. After his demise, his son Dr. Mahesh Kolapilly B.A.M.S took this position. From the year 2001 onwards Dr. Mahesh has been practicing at “Sreekrishna Vilasam Ayurveda Bala Vaidya sala”, a center through which the great traditional  knowledge of ayurvedic medication comes to the benefit of common man. Dr. Mahesh started “Kolapilly Ayurvedic Multispeciality Clinic” at Thammanam, where his skill and specialisation  in “Kaya Chikilsa” and paediatry can be applied with the help of the tremendous potentials of “Panchakarma Chikilsa”</p>
-
+Succeeding Sri. Govindan Vaidyar, from 1975 onwards, his son Sri. Madhavan Vaidyan, a leading figure in paediatrics in ayurveda of that time, was running the clinic. After his demise, his son Dr. Mahesh Kolapilly B.A.M.S took this position. From the year 2001 onwards Dr. Mahesh has been practicing at “Sreekrishna Vilasam Ayurveda Bala Vaidya sala”, a center through which the great traditional  knowledge of ayurvedic medication comes to the benefit of common man. Dr. Mahesh started “Kolapilly Ayurvedic Multispeciality Clinic” at Thammanam, where his skill and specialisation  in “Kaya Chikilsa” and paediatrics can be applied with the help of the tremendous potentials of “Panchakarma Chikilsa”</p>
 								<ul class="actions">
-									<li><a href="tel:04842333057" class="button">CALL 0484 233 30 57</a></li>
-									<li><a href="tel:+919847258057" class="button">CALL +91 9847 25 8057</a></li>
+									<li><a href="<?php if(is_mobile()){ echo'tel:04842333057';}else{ echo'#';} ?>" class="button">CALL 0484 233 30 57</a></li>
+								</ul> 
+								<ul class="actions">
+									<li><a href="<?php if(is_mobile()){ echo'tel:+919847258057';}else{ echo'#';} ?>" class="button">CALL +91 9847 25 8057</a></li>
+								</ul> 
+								<ul class="actions">
 									<li><a href="index.php" class="button">BACK TO HOME</a></li>
 								</ul>
 					</section>
