--- a/layouts/home.html
+++ b/layouts/home.html
@@ -76,7 +76,7 @@ Succeeding Sri. Govindan Vaidyar, from 1975 onwards, his son Sri. Madhavan Vaidy
 							<article class="6u$ 12u$(xsmall) ">
 								<a href="dr.saritha.mahesh.php" class="image fit thumb"><img src="images/profile/dr.saritha_mahesh.jpg" alt="" /></a>
 								<h3>Dr. SARITHA MAHESH B.A.M.S</h3>
-								<p>A graduate, researching women's health care and beauty enhancing therapies for the last one decade.
+								<p>A young B.A.M.S graduate from "SDM College of ayurveda" Udupi, hailing from family of traditional vaidyas. Specialized in Ayurvedic Nutritional Medicines and Gynecological diseases
 <br/><br/><br/></p>
 <h3>Consultation Time : <strong>2.30 PM - 5.30 PM</strong></h3>
 								<ul class="actions">
