stage 1 finished - 2 final

--- a/layouts/mahesh.html
+++ b/layouts/mahesh.html
@@ -8,8 +8,8 @@
 	<head>
 		<title>KOLAPILLY AYURVEDA :: Dr. Mahesh Kolapilly</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-		<meta name="description" content="" />
-		<meta name="keywords" content="" />
+<meta name= "keywords" content= "Kolapilly Ayurveda,  Dr. Mahesh Kolapilly B.A.M.S, Multispeciality Clinic at Thamanam, paediatrics , skin diseases">
+<meta name= "description" content= "A young Ayurvedic graduate with an established out patient clinician, hailing from a family of traditional vaidyas and a specialist in the field of paediatrics and skin diseases. Kolapilly Ayurveda,	Multispeciality Clinic at Thammanam,Kochi, India.">
 		<!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
 		<script src="js/jquery.min.js"></script>
 		<script src="js/jquery.poptrox.min.js"></script>
@@ -30,7 +30,7 @@
 			<header id="header">
 				<a href="index.php" class="image logo"><img src="images/profile/dr.mahesh.k.m.jpg" alt="" /></a>
 				<h1><strong>I am Dr. Mahesh Kolapilly </strong>,<br />
-				B.A.M.S<br />
+				B.A.M.S,<br />
 Consultation Time : <strong>10.00 AM - 1.00 PM</strong>
 				</h1>
 			</header>
