--- a/layouts/home.html
+++ b/layouts/home.html
@@ -8,8 +8,8 @@
 	<head>
 		<title>KOLAPILLY AYURVEDA :: HOME</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-		<meta name="description" content="" />
-		<meta name="keywords" content="" />
+<meta name= "keywords" content= "Kolapilly Ayurveda, Ayurvedic Treatment, Kaya Chikilsa, Panchakarma Chikilsa, Sreekrishna Vilasam Ayurveda Bala Vaidya Sala, Dr. Mahesh Kolapilly B.A.M.S, Dr. Saritha Mahesh B.A.M.S, traditional herbal medicines, traditional ayurvedic medicines, paediatrics , skin diseases, Ayurvedic Nutritional Medicines, Gynecological diseases, Multispeciality Clinic at Thamanam">
+<meta name= "description" content= "Kolapilly Ayurveda,	Multispeciality Clinic at Thammanam,Kochi, India.">
 		<!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
 		<script src="js/jquery.min.js"></script>
 		<script src="js/jquery.poptrox.min.js"></script>
@@ -76,8 +76,7 @@ Succeeding Sri. Govindan Vaidyar, from 1975 onwards, his son Sri. Madhavan Vaidy
 							<article class="6u$ 12u$(xsmall) ">
 								<a href="dr.saritha.mahesh.php" class="image fit thumb"><img src="images/profile/dr.saritha_mahesh.jpg" alt="" /></a>
 								<h3>Dr. SARITHA MAHESH B.A.M.S</h3>
-								<p>A young B.A.M.S graduate from "SDM College of ayurveda" Udupi, hailing from family of traditional vaidyas. Specialized in Ayurvedic Nutritional Medicines and Gynecological diseases
-<br/><br/><br/></p>
+								<p>A young B.A.M.S graduate from "SDM College of ayurveda" Udupi, hailing from family of traditional vaidyas. Specialized in Ayurvedic Nutritional Medicines and Gynecological diseases</p>
 <h3>Consultation Time : <strong>2.30 PM - 5.30 PM</strong></h3>
 								<ul class="actions">
 									<li><a href="<?php if(is_mobile()){ echo'tel:04842333057';}else{ echo'#';} ?>" class="button">CALL 0484 233 30 57</a></li>
