--- a/layouts/saritha.html
+++ b/layouts/saritha.html
@@ -8,8 +8,8 @@
 	<head>
 		<title>KOLAPILLY AYURVEDA :: Dr. Saritha Mahesh"</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-		<meta name="description" content="" />
-		<meta name="keywords" content="" />
+<meta name= "keywords" content= "Kolapilly Ayurveda,  Dr. Saritha Mahesh B.A.M.S, Multispeciality Clinic at Thamanam, Ayurvedic Nutritional Medicines, Gynecological diseases">
+<meta name= "description" content= "A young B.A.M.S graduate from 'SDM College of ayurveda' Udupi, hailing from family of traditional vaidyas. Specialized  in Ayurvedic Nutritional Medicines and Gynecological diseases at Kolapilly Ayurveda,	Multispeciality Clinic at Thammanam,Kochi, India.">
 		<!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
 		<script src="js/jquery.min.js"></script>
 		<script src="js/jquery.poptrox.min.js"></script>
@@ -30,7 +30,7 @@
 			<header id="header">
 				<a href="index.php" class="image logo"><img src="images/profile/dr.saritha_mahesh.jpg" alt="" /></a>
 				<h1><strong>I am Dr. Saritha Mahesh </strong>,<br />
-				B.A.M.S<br />
+				B.A.M.S,<br />
 				Consultation Time : <strong>2.30 PM - 5.30 PM</strong>
 				</h1>
 			</header>
