inauguration gallery added

--- a/layouts/home.html
+++ b/layouts/home.html
@@ -110,10 +110,43 @@ Succeeding Sri. Govindan Vaidyar, from 1975 onwards, his son Sri. Madhavan Vaidy
 						<h2>Gallery</h2>
 						<div class="row">
 							<article class="6u 12u$(xsmall) work-item">
-								<a href="images/gallery/kolapillyayurveda.inauguration.jpg" class="image fit thumb"><img src="images/gallery/kolapillyayurveda.inauguration.jpg" alt="" /></a>
-								<h3>Inauguration on 2015 Janurary 22nd</h3>
-								<p>By: Sri. Benny Behanan, MLA</p>
+								<a href="images/gallery/inauguration/1.jpg" class="image fit thumb"><img src="images/gallery/inauguration/1.jpg" alt="" /></a>
+								<h3>Inauguration -  22nd Janurary 2015</h3>
 							</article>
+
+							<article class="6u$ 12u$(xsmall) work-item">
+								<a href="images/gallery/inauguration/2.jpg" class="image fit thumb"><img src="images/gallery/inauguration/2.jpg" alt="" /></a>
+								<h3>Inauguration -  22nd Janurary 2015</h3>
+							</article>
+
+							<article class="6u 12u$(xsmall) work-item">
+								<a href="images/gallery/inauguration/3.jpg" class="image fit thumb"><img src="images/gallery/inauguration/3.jpg" alt="" /></a>
+								<h3>Inauguration -  22nd Janurary 2015</h3>
+							</article>
+
+							<article class="6u$ 12u$(xsmall) work-item">
+								<a href="images/gallery/inauguration/4.jpg" class="image fit thumb"><img src="images/gallery/inauguration/4.jpg" alt="" /></a>
+								<h3>Inauguration -  22nd Janurary 2015</h3>
+							</article>
+
+							<article class="6u 12u$(xsmall) work-item">
+								<a href="images/gallery/inauguration/5.jpg" class="image fit thumb"><img src="images/gallery/inauguration/5.jpg" alt="" /></a>
+								<h3>Inauguration -  22nd Janurary 2015</h3>
+							</article>
+
+							<article class="6u$ 12u$(xsmall) work-item">
+								<a href="images/gallery/inauguration/6.jpg" class="image fit thumb"><img src="images/gallery/inauguration/6.jpg" alt="" /></a>
+								<h3>Inauguration -  22nd Janurary 2015</h3>
+							</article>
+
+							<article class="6u 12u$(xsmall) work-item">
+								<a href="images/gallery/inauguration/7.jpg" class="image fit thumb"><img src="images/gallery/inauguration/7.jpg" alt="" /></a>
+								<h3>Inauguration -  22nd Janurary 2015</h3>
+							</article>
+
+
+
+
 							<article class="6u$ 12u$(xsmall) work-item">
 								<a href="images/gallery/kolapillyayurveda.clinic.jpg" class="image fit thumb"><img src="images/gallery/kolapillyayurveda.clinic.thumb.jpg" alt="" /></a>
 								<h3>Kolapilly Ayurveda</h3>
