--- a/layouts/gallery.html
+++ b/layouts/gallery.html
@@ -47,26 +47,129 @@
 						<h2>Gallery</h2>
 						<div class="row">
 							<article class="6u 12u$(xsmall) work-item">
-								<a href="images/gallery/kolapillyayurveda.inauguration.jpg" class="image fit thumb"><img src="images/gallery/kolapillyayurveda.inauguration.jpg" alt="" /></a>
-								<h3>Inauguration on 2015 Janurary 22nd</h3>
-								<p>By: Sri. Benny Behanan, MLA</p>
+								<a href="images/gallery/inauguration/1.jpg" class="image fit thumb"><img src="images/gallery/inauguration/1.jpg" alt="" /></a>
+								<h3>Inauguration -  22nd Janurary 2015</h3>
 							</article>
+
 							<article class="6u$ 12u$(xsmall) work-item">
+								<a href="images/gallery/inauguration/2.jpg" class="image fit thumb"><img src="images/gallery/inauguration/2.jpg" alt="" /></a>
+								<h3>Inauguration -  22nd Janurary 2015</h3>
+							</article>
+
+							<article class="6u 12u$(xsmall) work-item">
+								<a href="images/gallery/inauguration/3.jpg" class="image fit thumb"><img src="images/gallery/inauguration/3.jpg" alt="" /></a>
+								<h3>Inauguration -  22nd Janurary 2015</h3>
+							</article>
+
+							<article class="6u$ 12u$(xsmall) work-item">
+								<a href="images/gallery/inauguration/4.jpg" class="image fit thumb"><img src="images/gallery/inauguration/4.jpg" alt="" /></a>
+								<h3>Inauguration -  22nd Janurary 2015</h3>
+							</article>
+
+							<article class="6u 12u$(xsmall) work-item">
+								<a href="images/gallery/inauguration/5.jpg" class="image fit thumb"><img src="images/gallery/inauguration/5.jpg" alt="" /></a>
+								<h3>Inauguration -  22nd Janurary 2015</h3>
+							</article>
+
+							<article class="6u$ 12u$(xsmall) work-item">
+								<a href="images/gallery/inauguration/6.jpg" class="image fit thumb"><img src="images/gallery/inauguration/6.jpg" alt="" /></a>
+								<h3>Inauguration -  22nd Janurary 2015</h3>
+							</article>
+
+							<article class="6u 12u$(xsmall) work-item">
+								<a href="images/gallery/inauguration/7.jpg" class="image fit thumb"><img src="images/gallery/inauguration/7.jpg" alt="" /></a>
+								<h3>Inauguration -  22nd Janurary 2015</h3>
+							</article>
+
+							<article class="6u$ 12u$(xsmall) work-item">
+								<a href="images/gallery/inauguration/8.jpg" class="image fit thumb"><img src="images/gallery/inauguration/8.jpg" alt="" /></a>
+								<h3>Inauguration -  22nd Janurary 2015</h3>
+							</article>
+
+							<article class="6u 12u$(xsmall) work-item">
+								<a href="images/gallery/inauguration/9.jpg" class="image fit thumb"><img src="images/gallery/inauguration/9.jpg" alt="" /></a>
+								<h3>Inauguration -  22nd Janurary 2015</h3>
+							</article>
+
+							<article class="6u$ 12u$(xsmall) work-item">
+								<a href="images/gallery/inauguration/10.jpg" class="image fit thumb"><img src="images/gallery/inauguration/10.jpg" alt="" /></a>
+								<h3>Inauguration -  22nd Janurary 2015</h3>
+							</article>
+
+							<article class="6u 12u$(xsmall) work-item">
+								<a href="images/gallery/inauguration/11.jpg" class="image fit thumb"><img src="images/gallery/inauguration/11.jpg" alt="" /></a>
+								<h3>Inauguration -  22nd Janurary 2015</h3>
+							</article>
+
+							<article class="6u$ 12u$(xsmall) work-item">
+								<a href="images/gallery/inauguration/12.jpg" class="image fit thumb"><img src="images/gallery/inauguration/12.jpg" alt="" /></a>
+								<h3>Inauguration -  22nd Janurary 2015</h3>
+							</article>
+
+							<article class="6u 12u$(xsmall) work-item">
+								<a href="images/gallery/inauguration/13.jpg" class="image fit thumb"><img src="images/gallery/inauguration/13.jpg" alt="" /></a>
+								<h3>Inauguration -  22nd Janurary 2015</h3>
+							</article>
+
+							<article class="6u$ 12u$(xsmall) work-item">
+								<a href="images/gallery/inauguration/14.jpg" class="image fit thumb"><img src="images/gallery/inauguration/14.jpg" alt="" /></a>
+								<h3>Inauguration -  22nd Janurary 2015</h3>
+							</article>
+
+							<article class="6u 12u$(xsmall) work-item">
+								<a href="images/gallery/inauguration/15.jpg" class="image fit thumb"><img src="images/gallery/inauguration/15.jpg" alt="" /></a>
+								<h3>Inauguration -  22nd Janurary 2015</h3>
+							</article>
+
+							<article class="6u$ 12u$(xsmall) work-item">
+								<a href="images/gallery/inauguration/16.jpg" class="image fit thumb"><img src="images/gallery/inauguration/16.jpg" alt="" /></a>
+								<h3>Inauguration -  22nd Janurary 2015</h3>
+							</article>
+
+							<article class="6u 12u$(xsmall) work-item">
+								<a href="images/gallery/inauguration/17.jpg" class="image fit thumb"><img src="images/gallery/inauguration/17.jpg" alt="" /></a>
+								<h3>Inauguration -  22nd Janurary 2015</h3>
+							</article>
+
+							<article class="6u$ 12u$(xsmall) work-item">
+								<a href="images/gallery/inauguration/18.jpg" class="image fit thumb"><img src="images/gallery/inauguration/18.jpg" alt="" /></a>
+								<h3>Inauguration -  22nd Janurary 2015</h3>
+							</article>
+
+							<article class="6u 12u$(xsmall) work-item">
+								<a href="images/gallery/inauguration/19.jpg" class="image fit thumb"><img src="images/gallery/inauguration/19.jpg" alt="" /></a>
+								<h3>Inauguration -  22nd Janurary 2015</h3>
+							</article>
+
+							<article class="6u$ 12u$(xsmall) work-item">
+								<a href="images/gallery/inauguration/20.jpg" class="image fit thumb"><img src="images/gallery/inauguration/20.jpg" alt="" /></a>
+								<h3>Inauguration -  22nd Janurary 2015</h3>
+							</article>
+
+
+
+
+
+
+
+
+
+							<article class="6u 12u$(xsmall) work-item">
 								<a href="images/gallery/kolapillyayurveda.clinic.jpg" class="image fit thumb"><img src="images/gallery/kolapillyayurveda.clinic.thumb.jpg" alt="" /></a>
 								<h3>Kolapilly Ayurveda</h3>
 								<p>Multispeciality Clinic at Thammanam, Near Anandapuram Temple, Kochi, India.</p>
 							</article>
-							<article class="6u 12u$(xsmall) work-item">
+							<article class="6u$ 12u$(xsmall) work-item">
 								<a href="images/gallery/kolapillyayurveda.1.jpg" class="image fit thumb"><img src="images/gallery/kolapillyayurveda.1.jpg" alt="" /></a>
 								</article>
-							<article class="6u$ 12u$(xsmall) work-item">
+							<article class="6u 12u$(xsmall) work-item">
 								<a href="images/gallery/kolapillyayurveda.2.jpg" class="image fit thumb"><img src="images/gallery/kolapillyayurveda.2.jpg" alt="" /></a>
 
 							</article>
-							<article class="6u 12u$(xsmall) work-item">
+							<article class="6u$ 12u$(xsmall) work-item">
 								<a href="images/gallery/kolapillyayurveda.3.jpg" class="image fit thumb"><img src="images/gallery/kolapillyayurveda.3.jpg" alt="" /></a>
 							</article>
-							<article class="6u$ 12u$(xsmall) work-item">
+							<article class="6u 12u$(xsmall) work-item">
 								<a href="images/gallery/kolapillyayurveda.4.jpg" class="image fit thumb"><img src="images/gallery/kolapillyayurveda.4.jpg" alt="" /></a>
 							</article>
 
