--- a/layouts/gallery.html
+++ b/layouts/gallery.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>KOLAPILLY AYURVEDA :: GALLERY</title>
+		<title><?php echo $this->content->get_content(CONTENT_TYPE_TEXT,"Title",$this->page_name); ?></title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -28,122 +28,120 @@
 
 		<!-- Header -->
 			<header id="header">
-				<a href="index.php" class="image logo"><img src="images/logo.jpg" alt="" /></a>
-				<h1><strong>Kolapilly Ayurveda</strong>,<br />
-				Multispeciality Clinic at Thammanam<br />
-				Kochi, India.</h1>
+				<a href="index.php" class="image logo"><img src="<?php echo $this->content->get_content(CONTENT_TYPE_TEXT,'Logo','index'); ?>" alt="" /></a>
+				<?php echo $this->content->get_content(CONTENT_TYPE_HTML,"Address",'index'); ?>
 			</header>
 
 		<!-- Main -->
 
 <span id="language">
-	<?php // generate_language_links() ?>
+	<?php  generate_language_links() ?>
 </span>
 			<div id="main">
 
 
 				<!-- four -->
 					<section id="one">
-						<h2>Gallery</h2>
+						<h2><?php echo $this->content->get_content(CONTENT_TYPE_HTML,"Gallery",'index'); ?></h2>
 						<div class="row">
 							<article class="6u 12u$(xsmall) work-item">
 								<a href="images/gallery/inauguration/1.jpg" class="image fit thumb"><img src="images/gallery/inauguration/1.jpg" alt="" /></a>
-								<h3>Inauguration -  22nd Janurary 2015</h3>
+								<h3><?php echo $this->content->get_content(CONTENT_TYPE_HTML,"Inauguration",'index'); ?></h3>
 							</article>
 
 							<article class="6u$ 12u$(xsmall) work-item">
 								<a href="images/gallery/inauguration/2.jpg" class="image fit thumb"><img src="images/gallery/inauguration/2.jpg" alt="" /></a>
-								<h3>Inauguration -  22nd Janurary 2015</h3>
+								<h3><?php echo $this->content->get_content(CONTENT_TYPE_HTML,"Inauguration",'index'); ?></h3>
 							</article>
 
 							<article class="6u 12u$(xsmall) work-item">
 								<a href="images/gallery/inauguration/3.jpg" class="image fit thumb"><img src="images/gallery/inauguration/3.jpg" alt="" /></a>
-								<h3>Inauguration -  22nd Janurary 2015</h3>
+								<h3><?php echo $this->content->get_content(CONTENT_TYPE_HTML,"Inauguration",'index'); ?></h3>
 							</article>
 
 							<article class="6u$ 12u$(xsmall) work-item">
 								<a href="images/gallery/inauguration/4.jpg" class="image fit thumb"><img src="images/gallery/inauguration/4.jpg" alt="" /></a>
-								<h3>Inauguration -  22nd Janurary 2015</h3>
+								<h3><?php echo $this->content->get_content(CONTENT_TYPE_HTML,"Inauguration",'index'); ?></h3>
 							</article>
 
 							<article class="6u 12u$(xsmall) work-item">
 								<a href="images/gallery/inauguration/5.jpg" class="image fit thumb"><img src="images/gallery/inauguration/5.jpg" alt="" /></a>
-								<h3>Inauguration -  22nd Janurary 2015</h3>
+								<h3><?php echo $this->content->get_content(CONTENT_TYPE_HTML,"Inauguration",'index'); ?></h3>
 							</article>
 
 							<article class="6u$ 12u$(xsmall) work-item">
 								<a href="images/gallery/inauguration/6.jpg" class="image fit thumb"><img src="images/gallery/inauguration/6.jpg" alt="" /></a>
-								<h3>Inauguration -  22nd Janurary 2015</h3>
+								<h3><?php echo $this->content->get_content(CONTENT_TYPE_HTML,"Inauguration",'index'); ?></h3>
 							</article>
 
 							<article class="6u 12u$(xsmall) work-item">
 								<a href="images/gallery/inauguration/7.jpg" class="image fit thumb"><img src="images/gallery/inauguration/7.jpg" alt="" /></a>
-								<h3>Inauguration -  22nd Janurary 2015</h3>
+								<h3><?php echo $this->content->get_content(CONTENT_TYPE_HTML,"Inauguration",'index'); ?></h3>
 							</article>
 
 							<article class="6u$ 12u$(xsmall) work-item">
 								<a href="images/gallery/inauguration/8.jpg" class="image fit thumb"><img src="images/gallery/inauguration/8.jpg" alt="" /></a>
-								<h3>Inauguration -  22nd Janurary 2015</h3>
+								<h3><?php echo $this->content->get_content(CONTENT_TYPE_HTML,"Inauguration",'index'); ?></h3>
 							</article>
 
 							<article class="6u 12u$(xsmall) work-item">
 								<a href="images/gallery/inauguration/9.jpg" class="image fit thumb"><img src="images/gallery/inauguration/9.jpg" alt="" /></a>
-								<h3>Inauguration -  22nd Janurary 2015</h3>
+								<h3><?php echo $this->content->get_content(CONTENT_TYPE_HTML,"Inauguration",'index'); ?></h3>
 							</article>
 
 							<article class="6u$ 12u$(xsmall) work-item">
 								<a href="images/gallery/inauguration/10.jpg" class="image fit thumb"><img src="images/gallery/inauguration/10.jpg" alt="" /></a>
-								<h3>Inauguration -  22nd Janurary 2015</h3>
+								<h3><?php echo $this->content->get_content(CONTENT_TYPE_HTML,"Inauguration",'index'); ?></h3>
 							</article>
 
 							<article class="6u 12u$(xsmall) work-item">
 								<a href="images/gallery/inauguration/11.jpg" class="image fit thumb"><img src="images/gallery/inauguration/11.jpg" alt="" /></a>
-								<h3>Inauguration -  22nd Janurary 2015</h3>
+								<h3><?php echo $this->content->get_content(CONTENT_TYPE_HTML,"Inauguration",'index'); ?></h3>
 							</article>
 
 							<article class="6u$ 12u$(xsmall) work-item">
 								<a href="images/gallery/inauguration/12.jpg" class="image fit thumb"><img src="images/gallery/inauguration/12.jpg" alt="" /></a>
-								<h3>Inauguration -  22nd Janurary 2015</h3>
+								<h3><?php echo $this->content->get_content(CONTENT_TYPE_HTML,"Inauguration",'index'); ?></h3>
 							</article>
 
 							<article class="6u 12u$(xsmall) work-item">
 								<a href="images/gallery/inauguration/13.jpg" class="image fit thumb"><img src="images/gallery/inauguration/13.jpg" alt="" /></a>
-								<h3>Inauguration -  22nd Janurary 2015</h3>
+								<h3><?php echo $this->content->get_content(CONTENT_TYPE_HTML,"Inauguration",'index'); ?></h3>
 							</article>
 
 							<article class="6u$ 12u$(xsmall) work-item">
 								<a href="images/gallery/inauguration/14.jpg" class="image fit thumb"><img src="images/gallery/inauguration/14.jpg" alt="" /></a>
-								<h3>Inauguration -  22nd Janurary 2015</h3>
+								<h3><?php echo $this->content->get_content(CONTENT_TYPE_HTML,"Inauguration",'index'); ?></h3>
 							</article>
 
 							<article class="6u 12u$(xsmall) work-item">
 								<a href="images/gallery/inauguration/15.jpg" class="image fit thumb"><img src="images/gallery/inauguration/15.jpg" alt="" /></a>
-								<h3>Inauguration -  22nd Janurary 2015</h3>
+								<h3><?php echo $this->content->get_content(CONTENT_TYPE_HTML,"Inauguration",'index'); ?></h3>
 							</article>
 
 							<article class="6u$ 12u$(xsmall) work-item">
 								<a href="images/gallery/inauguration/16.jpg" class="image fit thumb"><img src="images/gallery/inauguration/16.jpg" alt="" /></a>
-								<h3>Inauguration -  22nd Janurary 2015</h3>
+								<h3><?php echo $this->content->get_content(CONTENT_TYPE_HTML,"Inauguration",'index'); ?></h3>
 							</article>
 
 							<article class="6u 12u$(xsmall) work-item">
 								<a href="images/gallery/inauguration/17.jpg" class="image fit thumb"><img src="images/gallery/inauguration/17.jpg" alt="" /></a>
-								<h3>Inauguration -  22nd Janurary 2015</h3>
+								<h3><?php echo $this->content->get_content(CONTENT_TYPE_HTML,"Inauguration",'index'); ?></h3>
 							</article>
 
 							<article class="6u$ 12u$(xsmall) work-item">
 								<a href="images/gallery/inauguration/18.jpg" class="image fit thumb"><img src="images/gallery/inauguration/18.jpg" alt="" /></a>
-								<h3>Inauguration -  22nd Janurary 2015</h3>
+								<h3><?php echo $this->content->get_content(CONTENT_TYPE_HTML,"Inauguration",'index'); ?></h3>
 							</article>
 
 							<article class="6u 12u$(xsmall) work-item">
 								<a href="images/gallery/inauguration/19.jpg" class="image fit thumb"><img src="images/gallery/inauguration/19.jpg" alt="" /></a>
-								<h3>Inauguration -  22nd Janurary 2015</h3>
+								<h3><?php echo $this->content->get_content(CONTENT_TYPE_HTML,"Inauguration",'index'); ?></h3>
 							</article>
 
 							<article class="6u$ 12u$(xsmall) work-item">
 								<a href="images/gallery/inauguration/20.jpg" class="image fit thumb"><img src="images/gallery/inauguration/20.jpg" alt="" /></a>
-								<h3>Inauguration -  22nd Janurary 2015</h3>
+								<h3><?php echo $this->content->get_content(CONTENT_TYPE_HTML,"Inauguration",'index'); ?></h3>
 							</article>
 
 
@@ -156,8 +154,8 @@
 
 							<article class="6u 12u$(xsmall) work-item">
 								<a href="images/gallery/kolapillyayurveda.clinic.jpg" class="image fit thumb"><img src="images/gallery/kolapillyayurveda.clinic.thumb.jpg" alt="" /></a>
-								<h3>Kolapilly Ayurveda</h3>
-								<p>Multispeciality Clinic at Thammanam, Near Anandapuram Temple, Kochi, India.</p>
+								<h3><?php echo $this->content->get_content(CONTENT_TYPE_HTML,"Kolapilly Ayurveda",'index'); ?></h3>
+								<p><?php echo $this->content->get_content(CONTENT_TYPE_HTML,"Multispeciality Clinic",'index'); ?> </p>
 							</article>
 							<article class="6u$ 12u$(xsmall) work-item">
 								<a href="images/gallery/kolapillyayurveda.1.jpg" class="image fit thumb"><img src="images/gallery/kolapillyayurveda.1.jpg" alt="" /></a>
@@ -190,7 +188,7 @@
 							</article>	
 						</div>
 						<ul class="actions">
-							<li><a href="index.php" class="button">BACK TO HOME</a></li>
+							<li><a href="index.php" class="button"><?php echo $this->content->get_content(CONTENT_TYPE_HTML,"BACK TO HOME",'index'); ?></a></li>
 						</ul>
 					</section>
 
