--- a/layouts/home.html
+++ b/layouts/home.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>KOLAPILLY AYURVEDA :: HOME</title>
+		<title><?php echo $this->content->get_content(CONTENT_TYPE_TEXT,"Title",$this->page_name); ?></title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 <meta name= "keywords" content= "Kolapilly Ayurveda, Ayurvedic Treatment, Kaya Chikilsa, Panchakarma Chikilsa, Sreekrishna Vilasam Ayurveda Bala Vaidya Sala, Dr. Mahesh Kolapilly B.A.M.S, Dr. Saritha Mahesh B.A.M.S, traditional herbal medicines, traditional ayurvedic medicines, paediatrics , skin diseases, Ayurvedic Nutritional Medicines, Gynecological diseases, Multispeciality Clinic at Thamanam">
 <meta name= "description" content= "Kolapilly Ayurveda,	Multispeciality Clinic at Thammanam,Kochi, India.">
@@ -28,42 +28,35 @@
 
 		<!-- Header -->
 			<header id="header">
-				<a href="index.php" class="image logo"><img src="images/logo.jpg" alt="" /></a>
-				<h1><strong>Kolapilly Ayurveda</strong>,<br />
-				Multispeciality Clinic at Thammanam<br />
-				Kochi, India.</h1>
+				<a href="index.php" class="image logo"><img src="<?php echo $this->content->get_content(CONTENT_TYPE_TEXT,'Logo',$this->page_name); ?>" alt="" /></a>
+				<?php echo $this->content->get_content(CONTENT_TYPE_HTML,"Address",$this->page_name); ?>
 			</header>
 
 		<!-- Main -->
 
 <span id="language">
-	<?php // generate_language_links() ?>
+	<?php  generate_language_links() ?>
 </span>
 			<div id="main">
 
 				<!-- One -->
 					<section id="one">
-						<header class="major">
-							<h2>Kolapilly Ayurveda Multispeciality Clinic<br />
-							specialisation  in Kaya Chikilsa and paediatry .</h2>
-						</header>
-						<p>The Kolapilly family, at Vennala in Ernakulam Dist. has a tradition of centuries in Ayurvedic treatment as well as production of ayurvedic medicines. The renowned physician Govindan Vaidyar, practitioner in Ayurvedic treatment, especially in paediatrics and psychiatry, is the pioneer in this tradition.
-<br /><br />
- During 1950s, under the initiative of  Sri. Govindan Vaidyar, a center was established at Thammanam, in the old Travancore-Kochi border, with the purpose of conducting trade and for storage of  Ayurvedic medicines. By 1954, this centre was developed into “Sreekrishna Vilasam Ayurveda Bala Vaidya Sala”, a center through which his expertise and experience in ayurvedic practice became beneficial to the local people. 
-<br /><br />
-Succeeding Sri. Govindan Vaidyar, from 1975 onwards, his son Sri. Madhavan Vaidyan, a leading figure in paediatrics in ayurveda of that time, was running the clinic. After his demise, his son Dr. Mahesh Kolapilly B.A.M.S took this position. From the year 2001 onwards Dr. Mahesh has been practicing at “Sreekrishna Vilasam Ayurveda Bala Vaidya sala”, a center through which the great traditional  knowledge of ayurvedic medication comes to the benefit of common man. Dr. Mahesh started “Kolapilly Ayurvedic Multispeciality Clinic” at Thammanam, where his skill and specialization  in “Kaya Chikilsa” and paediatrics can be applied with the help of the tremendous potentials of “Panchakarma Chikilsa”</p>
+					<?php echo $this->content->get_content(CONTENT_TYPE_HTML,"Page Heading",$this->page_name); ?>
+					<?php echo $this->content->get_content(CONTENT_TYPE_HTML,"Main Content",$this->page_name); ?>
+
+						
 
 					</section>
 
 				<!-- two -->
 					<section id="two">
-						<h2>Consultation</h2>
+						<?php echo $this->content->get_content(CONTENT_TYPE_HTML,"Consultation Caption",$this->page_name); ?>
 						<div class="row">
 							<article class="6u 12u$(xsmall) ">
 								<a href="dr.mahesh.kolapilly.php" class="image fit thumb"><img src="images/profile/dr.mahesh.k.m.jpg" alt="" /></a>
-								<h3>Dr. MAHESH KOLAPILLY B.A.M.S</h3>
-								<p>A young Ayurvedic graduate with an established out patient clinician, hailing from a family of traditional vaidyas and a specialist in the field of paediatrics and skin diseases.</p>
-<h3>Consultation Time : <strong>10.00 AM - 1.00 PM</strong></h3>
+								<?php echo $this->content->get_content(CONTENT_TYPE_HTML,"Mahesh Name",$this->page_name); ?>
+								<?php echo $this->content->get_content(CONTENT_TYPE_HTML,"Mahesh Content",$this->page_name); ?>
+<h3><?php echo $this->content->get_content(CONTENT_TYPE_HTML,"Consultation Time",$this->page_name); ?> : <strong>10.00 AM - 1.00 PM</strong></h3>
 								<ul class="actions">
 									<li><a href="<?php if(is_mobile()){ echo'tel:04842333057';}else{ echo'#';} ?>" class="button">CALL 0484 233 30 57</a></li>
 								</ul> 
@@ -75,9 +68,9 @@ Succeeding Sri. Govindan Vaidyar, from 1975 onwards, his son Sri. Madhavan Vaidy
 							</article>
 							<article class="6u$ 12u$(xsmall) ">
 								<a href="dr.saritha.mahesh.php" class="image fit thumb"><img src="images/profile/dr.saritha_mahesh.jpg" alt="" /></a>
-								<h3>Dr. SARITHA MAHESH B.A.M.S</h3>
-								<p>A young B.A.M.S graduate from "SDM College of ayurveda" Udupi, hailing from family of traditional vaidyas. Specialized in Ayurvedic Nutritional Medicines and Gynecological diseases</p>
-<h3>Consultation Time : <strong>2.30 PM - 5.30 PM</strong></h3>
+								<?php echo $this->content->get_content(CONTENT_TYPE_HTML,"Saritha Name",$this->page_name); ?>
+								<?php echo $this->content->get_content(CONTENT_TYPE_HTML,"Saritha Content",$this->page_name); ?>
+<h3><?php echo $this->content->get_content(CONTENT_TYPE_HTML,"Consultation Time",$this->page_name); ?> : <strong>2.30 PM - 5.30 PM</strong></h3>
 								<ul class="actions">
 									<li><a href="<?php if(is_mobile()){ echo'tel:04842333057';}else{ echo'#';} ?>" class="button">CALL 0484 233 30 57</a></li>
 								</ul> 
@@ -95,11 +88,11 @@ Succeeding Sri. Govindan Vaidyar, from 1975 onwards, his son Sri. Madhavan Vaidy
 				<!-- three -->
 					<section id="three">
 						<header class="major">
-							<h2>Pharmacy</h2>
+							<?php echo $this->content->get_content(CONTENT_TYPE_HTML,"Pharmacy Caption",$this->page_name); ?>
 						</header>
-						<p>Kolapilly with a tradition of centuries to their credit, has a pharmacy established at vennala, where traditional herbal medicines and special medicines for individual treatment are prepared under the supervision of the physician. The medicines are prepared in this pharmacy with the sole purpose of treating our patients and not for sale.</p>
+							<?php echo $this->content->get_content(CONTENT_TYPE_HTML,"Pharmacy Content",$this->page_name); ?>
 						<ul class="actions">
-							<li><a href="pharmacy.php" class="button">Visit Pharmacy</a></li>
+							<li><a href="pharmacy.php" class="button"><?php echo $this->content->get_content(CONTENT_TYPE_HTML,"Visit Pharmacy",$this->page_name); ?></a></li>
 						</ul>
 					</section>
 
@@ -107,41 +100,41 @@ Succeeding Sri. Govindan Vaidyar, from 1975 onwards, his son Sri. Madhavan Vaidy
 
 				<!-- four -->
 					<section id="four">
-						<h2>Gallery</h2>
+						<h2><?php echo $this->content->get_content(CONTENT_TYPE_HTML,"Gallery",$this->page_name); ?></h2>
 						<div class="row">
 							<article class="6u 12u$(xsmall) work-item">
 								<a href="images/gallery/inauguration/1.jpg" class="image fit thumb"><img src="images/gallery/inauguration/1.jpg" alt="" /></a>
-								<h3>Inauguration -  22nd Janurary 2015</h3>
+								<h3><?php echo $this->content->get_content(CONTENT_TYPE_HTML,"Inauguration",$this->page_name); ?></h3>
 							</article>
 
 							<article class="6u$ 12u$(xsmall) work-item">
 								<a href="images/gallery/inauguration/2.jpg" class="image fit thumb"><img src="images/gallery/inauguration/2.jpg" alt="" /></a>
-								<h3>Inauguration -  22nd Janurary 2015</h3>
+								<h3><?php echo $this->content->get_content(CONTENT_TYPE_HTML,"Inauguration",$this->page_name); ?></h3>
 							</article>
 
 							<article class="6u 12u$(xsmall) work-item">
 								<a href="images/gallery/inauguration/3.jpg" class="image fit thumb"><img src="images/gallery/inauguration/3.jpg" alt="" /></a>
-								<h3>Inauguration -  22nd Janurary 2015</h3>
+								<h3><?php echo $this->content->get_content(CONTENT_TYPE_HTML,"Inauguration",$this->page_name); ?></h3>
 							</article>
 
 							<article class="6u$ 12u$(xsmall) work-item">
 								<a href="images/gallery/inauguration/4.jpg" class="image fit thumb"><img src="images/gallery/inauguration/4.jpg" alt="" /></a>
-								<h3>Inauguration -  22nd Janurary 2015</h3>
+								<h3><?php echo $this->content->get_content(CONTENT_TYPE_HTML,"Inauguration",$this->page_name); ?></h3>
 							</article>
 
 							<article class="6u 12u$(xsmall) work-item">
 								<a href="images/gallery/inauguration/5.jpg" class="image fit thumb"><img src="images/gallery/inauguration/5.jpg" alt="" /></a>
-								<h3>Inauguration -  22nd Janurary 2015</h3>
+								<h3><?php echo $this->content->get_content(CONTENT_TYPE_HTML,"Inauguration",$this->page_name); ?></h3>
 							</article>
 
 							<article class="6u$ 12u$(xsmall) work-item">
 								<a href="images/gallery/inauguration/6.jpg" class="image fit thumb"><img src="images/gallery/inauguration/6.jpg" alt="" /></a>
-								<h3>Inauguration -  22nd Janurary 2015</h3>
+								<h3><?php echo $this->content->get_content(CONTENT_TYPE_HTML,"Inauguration",$this->page_name); ?></h3>
 							</article>
 
 							<article class="6u 12u$(xsmall) work-item">
 								<a href="images/gallery/inauguration/7.jpg" class="image fit thumb"><img src="images/gallery/inauguration/7.jpg" alt="" /></a>
-								<h3>Inauguration -  22nd Janurary 2015</h3>
+								<h3><?php echo $this->content->get_content(CONTENT_TYPE_HTML,"Inauguration",$this->page_name); ?></h3>
 							</article>
 
 
@@ -149,8 +142,8 @@ Succeeding Sri. Govindan Vaidyar, from 1975 onwards, his son Sri. Madhavan Vaidy
 
 							<article class="6u$ 12u$(xsmall) work-item">
 								<a href="images/gallery/kolapillyayurveda.clinic.jpg" class="image fit thumb"><img src="images/gallery/kolapillyayurveda.clinic.thumb.jpg" alt="" /></a>
-								<h3>Kolapilly Ayurveda</h3>
-								<p>Multispeciality Clinic at Thammanam, Near Anandapuram Temple, Kochi, India.</p>
+								<h3><?php echo $this->content->get_content(CONTENT_TYPE_HTML,"Kolapilly Ayurveda",$this->page_name); ?></h3>
+								<p><?php echo $this->content->get_content(CONTENT_TYPE_HTML,"Multispeciality Clinic",$this->page_name); ?> </p>
 							</article>
 							<article class="6u 12u$(xsmall) work-item">
 								<a href="images/gallery/kolapillyayurveda.1.jpg" class="image fit thumb"><img src="images/gallery/kolapillyayurveda.1.jpg" alt="" /></a>
@@ -162,26 +155,26 @@ Succeeding Sri. Govindan Vaidyar, from 1975 onwards, his son Sri. Madhavan Vaidy
 
 						</div>
 						<ul class="actions">
-							<li><a href="gallery.php" class="button">Visit Gallery</a></li>
+							<li><a href="gallery.php" class="button"><?php echo $this->content->get_content(CONTENT_TYPE_HTML,"Visit Gallery",$this->page_name); ?></a></li>
 						</ul>
 					</section>
 
 				<!-- five -->
 					<section id="five">
-						<h2>Leave us a message..</h2>
+						<h2><?php echo $this->content->get_content(CONTENT_TYPE_HTML,"Message Heading",$this->page_name); ?></h2>
 						<p></p>
 						<div class="row">
 							<div class="8u 12u$(small)">
 								<form method="post" action="thankyou.php">
 									<div class="row uniform 50%">
-										<div class="6u 12u$(xsmall)"><input type="text" name="name" id="name" placeholder="Name" /></div>
-										<div class="6u$ 12u$(xsmall)"><input type="email" name="email" id="email" placeholder="Email" /></div>
-										<div class="12u$"><textarea name="message" id="message" placeholder="Message" rows="4"></textarea></div>
-<div class="6u$ 12u$(xsmall)"><img src="captcha.php"><input type="text" name="captcha" id="captcha" placeholder="Please fill the above text" /></div>
+										<div class="6u 12u$(xsmall)"><input type="text" name="name" id="name" placeholder="<?php echo $this->content->get_content(CONTENT_TYPE_HTML,'Name Caption',$this->page_name); ?>" /></div>
+										<div class="6u$ 12u$(xsmall)"><input type="email" name="email" id="email" placeholder="<?php echo $this->content->get_content(CONTENT_TYPE_HTML,'Email Caption',$this->page_name); ?>" /></div>
+										<div class="12u$"><textarea name="message" id="message" placeholder="<?php echo $this->content->get_content(CONTENT_TYPE_HTML,'Message Caption',$this->page_name); ?>" rows="4"></textarea></div>
+<div class="6u$ 12u$(xsmall)"><img src="captcha.php"><input type="text" name="captcha" id="captcha" placeholder="<?php echo $this->content->get_content(CONTENT_TYPE_HTML,'Captcha',$this->page_name); ?>" /></div>
 									</div>
 <br/>
 								<ul class="actions">
-									<li><input name="submit"  type="submit" value="Send Message" /></li>
+									<li><input name="submit"  type="submit" value="<?php echo $this->content->get_content(CONTENT_TYPE_HTML,'Send Message',$this->page_name); ?>" /></li>
 								</ul>
 								</form>
 							</div>
@@ -189,9 +182,7 @@ Succeeding Sri. Govindan Vaidyar, from 1975 onwards, his son Sri. Madhavan Vaidy
 								<ul class="labeled-icons">
 									<li>
 										<h3 class="icon fa-home"><span class="label">Address</span></h3>
-										35/2518 Thamanam<br />
-									   Kochi 682032, Kerala <br />
-										India.
+<?php echo $this->content->get_content(CONTENT_TYPE_HTML,"Address Bottom",$this->page_name); ?>
 									</li>
 									<li>
 										<h3 class="icon fa-mobile"><span class="label">Phone</span></h3>
@@ -207,12 +198,13 @@ Succeeding Sri. Govindan Vaidyar, from 1975 onwards, his son Sri. Madhavan Vaidy
 					</section>
 
 					<section id="six">
-						<h2>MAP</h2>
-
-<article class="6u$ 12u$(xsmall) work-item">
+						<h2><?php echo $this->content->get_content(CONTENT_TYPE_HTML,"MAP",$this->page_name); ?></h2>
+							<div class="row">
+								<article class="6u 12u$(xsmall) work-item">
 								<a href="images/map.jpg" class="image fit thumb"><img src="images/map.jpg" alt="" /></a>
-
-							</article>
+								<h3><?php echo $this->content->get_content(CONTENT_TYPE_HTML,"MAP",$this->page_name); ?> -  <?php echo $this->content->get_content(CONTENT_TYPE_HTML,"Kolapilly Ayurveda",$this->page_name); ?></h3>
+								</article>
+							</div>
 					</section>
 
 
