--- a/layouts/pharmacy.html
+++ b/layouts/pharmacy.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>KOLAPILLY AYURVEDA :: PHARMACY</title>
+		<title><?php echo $this->content->get_content(CONTENT_TYPE_TEXT,"Title",$this->page_name); ?></title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -28,32 +28,22 @@
 
 		<!-- Header -->
 			<header id="header">
-				<a href="index.php" class="image logo"><img src="images/logo.jpg" alt="" /></a>
-				<h1><strong>Kolapilly Ayurveda</strong>,<br />
-				Multispeciality Clinic at Thammanam<br />
-				Kochi, India.</h1>
+				<a href="index.php" class="image logo"><img src="<?php echo $this->content->get_content(CONTENT_TYPE_TEXT,'Logo','index'); ?>" alt="" /></a>
+				<?php echo $this->content->get_content(CONTENT_TYPE_HTML,"Address",'index'); ?>
 			</header>
 
 		<!-- Main -->
 
 <span id="language">
-	<?php // generate_language_links() ?>
+	<?php  generate_language_links() ?>
 </span>
 			<div id="main">
 
 				<!-- One -->
 					<section id="one">
-						<header class="major">
-							<h2>Pharmacy</h2>
-						</header>
-						<p>Kolapilly with a tradition of centuries to their credit, has a pharmacy established at vennala, where traditional herbal medicines and special medicines for individual treatment are prepared under the supervision of the physician. The medicines are prepared in this pharmacy with the sole purpose of treating our patients and not for sale.
-<br /><br />
-
-The Kolapilly family, at Vennala in Ernakulam Dist. has a tradition of centuries in Ayurvedic treatment as well as production of ayurvedic medicines. The renowned physician Govindan Vaidyar, practitioner in Ayurvedic treatment, especially in paediatrics and psychiatry, is the pioneer in this tradition.
-<br /><br />
- During 1950s, under the initiative of  Sri. Govindan Vaidyar, a center was established at Thammanam, in the old Travancore-Kochi border, with the purpose of conducting trade and for storage of  Ayurvedic medicines. By 1954, this center was developed into “Sreekrishna Vilasam Ayurveda Bala Vaidya Sala”, a centre through which his expertise and experience in ayurvedic practice became beneficial to the local people. 
-<br /><br />
-“Sreekrishna Vilasam Ayurveda Bala Vaidya sala”, a center through which the great traditional  knowledge of ayurvedic medication comes to the benefit of common man. Dr. Mahesh started “Kolapilly Ayurvedic Multispeciality Clinic” at Thammanam, where his skill and specialization  in “Kaya Chikilsa” and paediatrics can be applied with the help of the tremendous potentials of “Panchakarma Chikilsa”</p>
+					<?php echo $this->content->get_content(CONTENT_TYPE_HTML,"Page Heading",$this->page_name); ?>
+					<?php echo $this->content->get_content(CONTENT_TYPE_HTML,"Main Content",$this->page_name); ?>
+						
 
 					</section>
 
@@ -61,7 +51,7 @@ The Kolapilly family, at Vennala in Ernakulam Dist. has a tradition of centuries
 
 				<!-- four -->
 					<section id="two">
-						<h2>Gallery</h2>
+						<h2><?php echo $this->content->get_content(CONTENT_TYPE_HTML,"Gallery",'index'); ?></h2>
 						<div class="row">
 							<article class="6u 12u$(xsmall) work-item">
 								<a href="images/pharmacy/1.jpg" class="image fit thumb"><img src="images/pharmacy/1.jpg" alt="" /></a>
@@ -82,7 +72,7 @@ The Kolapilly family, at Vennala in Ernakulam Dist. has a tradition of centuries
 
 				
 								<ul class="actions">
-									<li><a href="index.php" class="button">BACK TO HOME</a></li>
+									<li><a href="index.php" class="button"><?php echo $this->content->get_content(CONTENT_TYPE_HTML,"BACK TO HOME",'index'); ?></a></li>
 								</ul>
 
 			</div>
