--- a/layouts/saritha.html
+++ b/layouts/saritha.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>KOLAPILLY AYURVEDA :: Dr. Saritha Mahesh"</title>
+		<title><?php echo $this->content->get_content(CONTENT_TYPE_TEXT,"Title",$this->page_name); ?></title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 <meta name= "keywords" content= "Kolapilly Ayurveda,  Dr. Saritha Mahesh B.A.M.S, Multispeciality Clinic at Thamanam, Ayurvedic Nutritional Medicines, Gynecological diseases">
 <meta name= "description" content= "A young B.A.M.S graduate from 'SDM College of ayurveda' Udupi, hailing from family of traditional vaidyas. Specialized  in Ayurvedic Nutritional Medicines and Gynecological diseases at Kolapilly Ayurveda,	Multispeciality Clinic at Thammanam,Kochi, India.">
@@ -29,32 +29,24 @@
 		<!-- Header -->
 			<header id="header">
 				<a href="index.php" class="image logo"><img src="images/profile/dr.saritha_mahesh.jpg" alt="" /></a>
-				<h1><strong>I am Dr. Saritha Mahesh </strong>,<br />
-				B.A.M.S,<br />
-				Consultation Time : <strong>2.30 PM - 5.30 PM</strong>
+				<h1><?php echo $this->content->get_content(CONTENT_TYPE_HTML,"Intro",$this->page_name); ?>
+<?php echo $this->content->get_content(CONTENT_TYPE_HTML,"Consultation Time",'index'); ?> : <strong>2.30 PM - 5.30 PM</strong>
 				</h1>
 			</header>
 
 		<!-- Main -->
 
 <span id="language">
-	<?php // generate_language_links() ?>
+	<?php  generate_language_links() ?>
 </span>
 			<div id="main">
 
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2>Dr. SARITHA MAHESH B.A.M.S</h2>
+							<h2><?php echo $this->content->get_content(CONTENT_TYPE_HTML,"Saritha Name","index"); ?></h2>
 						</header>
-						<p>A young B.A.M.S graduate from "SDM College of ayurveda" Udupi, hailing from family of traditional vaidyas. She is the grand daughter of ANKAN VAIDYAN, who is specialized in "Vata Rogas" (Rheumatic diseases). She is working in "Wellness Solutions", Kundannur. 
-<br /><br />
- Dr. Saritha Mahesh is also practicing at “Sreekrishna Vilasam Ayurveda Bala Vaidya sala”, a center through which the great traditional  knowledge of ayurvedic medication comes to the benefit of common man. 
-Specialized  in Ayurvedic Nutritional Medicines and Gynecological diseases. 
-<br /><br />
- During 1950s, under the initiative of  Sri. Govindan Vaidyar, a centre was established at Thammanam, in the old Travancore-Kochi border, with the purpose of conducting trade and for storage of  Ayurvedic medicines. By 1954, this center was developed into “Sreekrishna Vilasam Ayurveda Bala Vaidya Sala”, a centre through which his expertise and experience in ayurvedic practice became beneficial to the local people. 
-<br /><br />
-From 1975 onwards, Sri. Govindan Vaidyar son Sri. Madhavan Vaidyan, a leading figure in paediatrics in ayurveda of that time, was running the clinic. After his demise, his son Dr. Mahesh Kolapilly B.A.M.S took this position. From the year 2001 onwards Dr. Mahesh has been practicing at “Sreekrishna Vilasam Ayurveda Bala Vaidya sala”, a center through which the great traditional  knowledge of ayurvedic medication comes to the benefit of common man.
+												<?php echo $this->content->get_content(CONTENT_TYPE_HTML,"Saritha Content",$this->page_name); ?>
 
 </p>
 </p>
@@ -65,7 +57,7 @@ From 1975 onwards, Sri. Govindan Vaidyar son Sri. Madhavan Vaidyan, a leading fi
 									<li><a href="<?php if(is_mobile()){ echo'tel:+919446536538';}else{ echo'#';} ?>" class="button">CALL +91 944 653 6538</a></li>
 								</ul> 
 								<ul class="actions">
-									<li><a href="index.php" class="button">BACK TO HOME</a></li>
+									<li><a href="index.php" class="button"><?php echo $this->content->get_content(CONTENT_TYPE_HTML,"BACK TO HOME",'index'); ?></a></li>
 								</ul>
 
 					</section>
