--- a/layouts/gallery.html
+++ b/layouts/gallery.html
@@ -145,30 +145,59 @@
 							</article>
 
 
+							<article class="6u 12u$(xsmall) work-item">
+								<a href="images/gallery/inauguration/21.jpg" class="image fit thumb"><img src="images/gallery/inauguration/21.jpg" alt="" /></a>
+								<h3><?php echo $this->content->get_content(CONTENT_TYPE_HTML,"Inauguration",'index'); ?></h3>
+							</article>
+
+							<article class="6u$ 12u$(xsmall) work-item">
+								<a href="images/gallery/inauguration/22.jpg" class="image fit thumb"><img src="images/gallery/inauguration/22.jpg" alt="" /></a>
+								<h3><?php echo $this->content->get_content(CONTENT_TYPE_HTML,"Inauguration",'index'); ?></h3>
+							</article>
 
 
+							<article class="6u 12u$(xsmall) work-item">
+								<a href="images/gallery/inauguration/23.jpg" class="image fit thumb"><img src="images/gallery/inauguration/23.jpg" alt="" /></a>
+								<h3><?php echo $this->content->get_content(CONTENT_TYPE_HTML,"Inauguration",'index'); ?></h3>
+							</article>
 
+							<article class="6u$ 12u$(xsmall) work-item">
+								<a href="images/gallery/inauguration/24.jpg" class="image fit thumb"><img src="images/gallery/inauguration/24.jpg" alt="" /></a>
+								<h3><?php echo $this->content->get_content(CONTENT_TYPE_HTML,"Inauguration",'index'); ?></h3>
+							</article>
 
+							<article class="6u 12u$(xsmall) work-item">
+								<a href="images/gallery/inauguration/25.jpg" class="image fit thumb"><img src="images/gallery/inauguration/25.jpg" alt="" /></a>
+								<h3><?php echo $this->content->get_content(CONTENT_TYPE_HTML,"Inauguration",'index'); ?></h3>
+							</article>
+
+							<article class="6u$ 12u$(xsmall) work-item">
+								<a href="images/gallery/inauguration/26.jpg" class="image fit thumb"><img src="images/gallery/inauguration/26.jpg" alt="" /></a>
+								<h3><?php echo $this->content->get_content(CONTENT_TYPE_HTML,"Inauguration",'index'); ?></h3>
+							</article>
 
 
 
 							<article class="6u 12u$(xsmall) work-item">
-								<a href="images/gallery/kolapillyayurveda.clinic.jpg" class="image fit thumb"><img src="images/gallery/kolapillyayurveda.clinic.thumb.jpg" alt="" /></a>
+								<a href="images/gallery/inauguration/27.jpg" class="image fit thumb"><img src="images/gallery/inauguration/27.jpg" alt="" /></a>
+								<h3><?php echo $this->content->get_content(CONTENT_TYPE_HTML,"Inauguration",'index'); ?></h3>
+							</article>
+
+
+
+
+
+							<article class="6u$ 12u$(xsmall) work-item">
+								<a href="images/gallery/kolapillyayurveda.clinic.jpg" class="image fit thumb"><img src="images/gallery/kolapillyayurveda.clinic.jpg" alt="" /></a>
 								<h3><?php echo $this->content->get_content(CONTENT_TYPE_HTML,"Kolapilly Ayurveda",'index'); ?></h3>
 								<p><?php echo $this->content->get_content(CONTENT_TYPE_HTML,"Multispeciality Clinic",'index'); ?> </p>
 							</article>
-							<article class="6u$ 12u$(xsmall) work-item">
+							<article class="6u 12u$(xsmall) work-item">
 								<a href="images/gallery/kolapillyayurveda.1.jpg" class="image fit thumb"><img src="images/gallery/kolapillyayurveda.1.jpg" alt="" /></a>
 								</article>
-							<article class="6u 12u$(xsmall) work-item">
+							<article class="6u$ 12u$(xsmall) work-item">
 								<a href="images/gallery/kolapillyayurveda.2.jpg" class="image fit thumb"><img src="images/gallery/kolapillyayurveda.2.jpg" alt="" /></a>
 
-							</article>
-							<article class="6u$ 12u$(xsmall) work-item">
-								<a href="images/gallery/kolapillyayurveda.3.jpg" class="image fit thumb"><img src="images/gallery/kolapillyayurveda.3.jpg" alt="" /></a>
-							</article>
-							<article class="6u 12u$(xsmall) work-item">
-								<a href="images/gallery/kolapillyayurveda.4.jpg" class="image fit thumb"><img src="images/gallery/kolapillyayurveda.4.jpg" alt="" /></a>
 							</article>
 
 
