--- a/layouts/home.html
+++ b/layouts/home.html
@@ -137,11 +137,21 @@
 								<h3><?php echo $this->content->get_content(CONTENT_TYPE_HTML,"Inauguration",$this->page_name); ?></h3>
 							</article>
 
+							<article class="6u$ 12u$(xsmall) work-item">
+								<a href="images/gallery/inauguration/21.jpg" class="image fit thumb"><img src="images/gallery/inauguration/21.jpg" alt="" /></a>
+								<h3><?php echo $this->content->get_content(CONTENT_TYPE_HTML,"Inauguration",$this->page_name); ?></h3>
+							</article>
+
+							<article class="6u 12u$(xsmall) work-item">
+								<a href="images/gallery/inauguration/2.jpg" class="image fit thumb"><img src="images/gallery/inauguration/22.jpg" alt="" /></a>
+								<h3><?php echo $this->content->get_content(CONTENT_TYPE_HTML,"Inauguration",$this->page_name); ?></h3>
+							</article>
+
 
 
 
 							<article class="6u$ 12u$(xsmall) work-item">
-								<a href="images/gallery/kolapillyayurveda.clinic.jpg" class="image fit thumb"><img src="images/gallery/kolapillyayurveda.clinic.thumb.jpg" alt="" /></a>
+								<a href="images/gallery/kolapillyayurveda.clinic.jpg" class="image fit thumb"><img src="images/gallery/kolapillyayurveda.clinic.jpg" alt="" /></a>
 								<h3><?php echo $this->content->get_content(CONTENT_TYPE_HTML,"Kolapilly Ayurveda",$this->page_name); ?></h3>
 								<p><?php echo $this->content->get_content(CONTENT_TYPE_HTML,"Multispeciality Clinic",$this->page_name); ?> </p>
 							</article>
